--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <div class="footer-txt">
                 <p>
                     All copyrights reserved 2021 © - Design & Development by
-                    <Strong>IT Vanilla Team</Strong>
+                    <Strong>Forhad</Strong>
                 </p>
             </div>
             <div class="social_icon">
